--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "packages/h5"
-  command = "pnpm build"
-  publish = "dist"
+  base = ""
+  command = "pnpm build:h5"
+  publish = "packages/h5/dist"
 
 [build.environment]
   NODE_VERSION = "18"
